Convert InfectionDeck to a Deque type collection
Changing the type of the variable to Deque<CityCard>